k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: healthcare-service
  namespace: healthcare
spec:
  selector:
    app: healthcare-api
  type: NodePort
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
    nodePort: 30300
